<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="70dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question2"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/rg_dias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/rb_day1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day1" />
                <RadioButton android:id="@+id/rb_day2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day2" />
                <RadioButton android:id="@+id/rb_day3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day3" />
                <RadioButton android:id="@+id/rb_day4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day4" />
                <RadioButton android:id="@+id/rb_day5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day5" />
                <RadioButton android:id="@+id/rb_day6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day6" />
                <RadioButton android:id="@+id/rb_day7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day7" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question3"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:background="?android:attr/selectableItemBackground"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingHorizontal="50dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/add"
                />

        </LinearLayout>

    </ScrollView>
</LinearLayout>